# NDA-Main

./: .gitignore  README.md
NDA-frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
NDA-frontend/src/: App.jsx  main.jsx
NDA-frontend/src/components/: CategoryCard.jsx  CategoryGrid.jsx  CategoryPanel.jsx
NDA-frontend/src/data/: categories.jsx
NDA-frontend/src/styles/: animations.css  base.css  categoryCard.css  categoryGrid.css  categoryPanel.css  footer.css  header.css  styles.css  theme.css
lg-fastapi-exp/: .env.example  fastapi_app.py  main.py  prompts.py  pyproject.toml
